--- a/app/views/9-3-3/contents.html
+++ b/app/views/9-3-3/contents.html
@@ -12,7 +12,7 @@
     <div class="govuk-grid-column-two-thirds">
 		
       	<h1 class="govuk-heading-xl">
-        	Contents <span class="govuk-caption-xl">Version Kit Kat 9.4.0</span>       
+        	Contents <span class="govuk-caption-xl">Version 9.3.3 - MVS</span>       
       	</h1>
       	<p>
         	Please do not enter any personal information. This prototype is not secure.
@@ -27,9 +27,7 @@
 			<li><a href="choose_file_to_upload.html">Choose file to upload</a></li>
 			<li><a href="your_files_uploading.html">Your file's uploading</a></li>
 			<li><a href="theres_a_problem.html">There's a problem</a></li>			
-			<li><a href="ilr_data_submitted.html">ILR data submitted</a></li>
-			<li><a href="reports.html">Reports</a></li>
-            <li><a href="previous-reports.html">Previous reports</a></li>
+			<li><a href="ilr_data_submitted.html">ILR data submitted</a></li>			
 		</ul>
         <h2 class="govuk-heading-l">ILR User Journey (Uber happy path)</h2>		
 		<ul class="govuk-list govuk-list--number">
@@ -38,9 +36,7 @@
 		   	<li><a href="what_data_do_you_want_to_submit.html">What data do you want to submit?</a></li>
 			<li><a href="choose_file_to_upload.html">Choose file to upload</a></li>
 			<li><a href="your_files_uploading.html">Your file's uploading</a></li>		
-			<li><a href="ilr_data_submitted_clean.html">ILR data submitted (Clean file)</a></li>
-			<li><a href="reports.html">Reports</a></li>
-            <li><a href="previous-reports.html">Previous reports</a></li>
+			<li><a href="ilr_data_submitted_clean.html">ILR data submitted (Clean file)</a></li>			
 		</ul>
 
 		<h2 class="govuk-heading-l">EAS (Happy Path)</h2>
@@ -49,10 +45,13 @@
 			<li><a href="start.html">Start page</a></li>
 		  	<li><a href="idams.html">IDAMS</a></li>
 		   	<li><a href="what_data_do_you_want_to_submit.html">What data do you want to submit?</a></li>
-			<li><a href="eas_choose_file_to_upload.html">Manage your earning adjustment statement</a></li>
-			<li><a href="eas_data_submitted.html">EAS data submitted</a></li>			
-			<li><a href="reports.html">Reports</a></li>
+			<li><a href="manage_your_eas.html">Manage your earning adjustment statement</a></li>
+			<li><a href="choose_programme.html">Choose programme</a></li>
+			<li><a href="add_claim_details.html">Add claim details</a></li>
+			<li><a href="manage_your_eas_added.html">Claim added</a></li>
+            <li><a href="eas_data_submitted.html">EAS data submitted</a></li>
 		</ul>
+
 
 		<h2 class="govuk-heading-l">ESF User Journey (Happy Path)</h2>
 		
@@ -61,12 +60,12 @@
 		  	<li><a href="idams.html">IDAMS</a></li>
 		   	<li><a href="what_data_do_you_want_to_submit.html">What data do you want to submit?</a></li>
 			<li><a href="esf_choose_file_to_upload.html">Choose file to upload</a></li>
-			<li><a href="your_files_uploading.html">Your file's uploading (wip)</a></li>
+			<li><a href="your_files_uploading.html">Your file's uploading</a></li>
 			<li><a href="esf_data_submitted.html">ESF data submitted</a></li>
-			<li><a href="reports.html">Reports</a></li>
+			
 		</ul>
 
-		<h2 class="govuk-heading-l">Error states and fails</h2>
+		<!--<h2 class="govuk-heading-l">Error states and fails</h2>
 		
 		<ul class="govuk-list govuk-list--bullet">	
 			<li><a href="what_data_do_you_want_to_submit_error.html">What data do you want to submit? (error state)</a></li>
@@ -75,7 +74,7 @@
 			<li><a href="upload_file_failed.html">File upload failed</a></li>
 			<li><a href="submit_data_error_1.html">Submit data (error state 1)</a></li>			
 			
-		</ul> 
+		</ul>--> 
 		
 		<h2 class="govuk-heading-l">Service pages</h2>
 		
@@ -86,16 +85,10 @@
         <h2 class="govuk-heading-l">Emails</h2>
 		
 		<ul class="govuk-list govuk-list--bullet">	
-			<li><a href="./ilr-email-for-provider.html">ILR email for provider</a></li>
+			<li><a href="./ilr-email-for-provider.html">ILR email for provider (Processing)</a></li>
+            <li><a href="./ilr-email-for-provider-reports.html">ILR email for provider (View reports)</a></li>
 			
-		</ul>
-        <h2 class="govuk-heading-l">Guidance (Not in MVP)</h2>
-		
-		<ul class="govuk-list govuk-list--bullet">	
-			<li><a href="step-by-step.html">Submit learner data: step-by-step</a></li>
-            <li><a href="useful_tools.html">Useful tools</a></li>
-			
-		</ul>
+		</ul>        
         <h2 class="govuk-heading-l">Feedback</h2>
 		
 		<ul class="govuk-list govuk-list--bullet">	
