--- a/app/views/KitKat-9-4-1/contents.html
+++ b/app/views/KitKat-9-4-1/contents.html
@@ -50,7 +50,7 @@
 		  	<li><a href="idams.html">IDAMS</a></li>
 		   	<li><a href="what_data_do_you_want_to_submit.html">What data do you want to submit?</a></li>
 			<li><a href="eas_choose_file_to_upload.html">Manage your earning adjustment statement</a></li>
-			<li><a href="eas_data_submitted.html">Choose programme</a></li>			
+			<li><a href="eas_data_submitted.html">EAS data submitted</a></li>			
 			<li><a href="reports.html">Reports</a></li>
 		</ul>
 
