--- a/app/views/9-3-3/eas_choose_file_to_upload.html
+++ b/app/views/9-3-3/eas_choose_file_to_upload.html
@@ -18,7 +18,7 @@
 		<p>Before uploading your file you should make sure that:</p>
 		<ul class="govuk-list govuk-list--bullet">
       <li>it’s in a CSV format</li>
-      <li>it’s using the <a href="#">ESF non-ILR data return template</a></li>
+      <li>it’s using the <a href="#">EAS data return template</a></li>
 			<li>the data it contains is as complete as possible</li>
 			<li>the data it contains is as accurate as possible</li>
 		</ul>
@@ -27,9 +27,10 @@
         Upload a file
       </label>
       <input class="govuk-file-upload" id="file-upload-1" name="file-upload-1" type="file">
-      <input type="hidden" name="whattosubmit" value="{{ data['whattosubmit'] }}">          
+      <input type="hidden" name="whattosubmit" value="{{ data['whattosubmit'] }}">
     </div>
-    <button class="govuk-button">
+
+	  <button class="govuk-button">
       Upload file
     </button>
   </form>
