--- a/app/views/index.html
+++ b/app/views/index.html
@@ -27,7 +27,7 @@
     </tr>
   </thead>
   <tbody class="govuk-table__body">
-      <tr class="govuk-table__row">
+      <!--<tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">Kit Kat 9.4.1</th>
         <td class="govuk-table__cell ">
           <ul class="govuk-list govuk-list--bullet">
@@ -38,7 +38,7 @@
         </td>
         <td class="govuk-table__cell "><a href="KitKat-9-4-1/contents.html">Contents</a></td>
         <td class="govuk-table__cell "><a href="KitKat-9-4-1/start.html">Start now</a></td>
-    </tr>
+    </tr>-->
       
        <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">Kit Kat 9.4.0</th>
@@ -63,16 +63,23 @@
         <td class="govuk-table__cell "><a href="KitKat-9-4-0/start.html">Start now</a></td>
     </tr>
     <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">9.3.3</th>
+        <td class="govuk-table__cell ">
+         Stopped version for MVS - removed reports
+        </td>
+        <td class="govuk-table__cell "><a href="9-3-3/contents.html">Contents</a></td>
+        <td class="govuk-table__cell "><a href="./9-3-3/start.html">Start now</a></td>
+    </tr>
+          <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">9.3.2</th>
         <td class="govuk-table__cell ">
           <ul class="govuk-list govuk-list--bullet">
             <p>We:</p>
-            <li>enhanced the EAS journey</li>
-            <li>EAS add/change now in table format</li>
+            <li>added the EAS journey</li>
           </ul>
         </td>
-        <td class="govuk-table__cell "><a href="9-3-2/contents.html">Contents</a></td>
-        <td class="govuk-table__cell "><a href="./9-3-2/start.html">Start now</a></td>
+        <td class="govuk-table__cell "><a href="9-3-1/contents.html">Contents</a></td>
+        <td class="govuk-table__cell "><a href="./9-3-1/start.html">Start now</a></td>
     </tr>
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">9.3.1</th>
