--- a/app/views/9-3-3/includes/back_choose_file_to_upload.html
+++ b/app/views/9-3-3/includes/back_choose_file_to_upload.html
@@ -7,7 +7,7 @@
 <div class="account-info govuk-body">
             <div>
                 <span class="your-name" id="bannerUserName">Sam Smith
-                UKPRN:123456</span> <a class="account-link" href="./reports" id="reports-link">Reports</a>
+                UKPRN:123456</span> <a class="account-link" href="./exit-survey" id="signout-link">Sign out</a>
             </div>
     
         </div>
