--- a/app/views/9-3-3/what_data_do_you_want_to_submit.html
+++ b/app/views/9-3-3/what_data_do_you_want_to_submit.html
@@ -40,12 +40,12 @@
         ILR (Individualised Learner Records)
       </label>
       </div>
-      <div class="govuk-radios__item">
+      <!--<div class="govuk-radios__item">
         <input class="govuk-radios__input" id="what-to-submit-2" name="whattosubmit" type="radio" value="eas">
         <label class="govuk-label govuk-radios__label" for="what-to-submit-2">
         EAS (Earnings Adjustment Statement) 
       </label>
-      </div>
+      </div>-->
       <div class="govuk-radios__item">
         <input class="govuk-radios__input" id="what-to-submit-3" name="whattosubmit" type="radio" value="esf">
         <label class="govuk-label govuk-radios__label" for="what-to-submit-3">
