--- a/app/views/index.html
+++ b/app/views/index.html
@@ -65,7 +65,7 @@
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">9.3.3</th>
         <td class="govuk-table__cell ">
-         Stopped version for MVS - removed reports
+         Stopped version for MVS - removed reports and EAS
         </td>
         <td class="govuk-table__cell "><a href="9-3-3/contents.html">Contents</a></td>
         <td class="govuk-table__cell "><a href="./9-3-3/start.html">Start now</a></td>
