--- a/app/views/9-3-3/esf_data_submitted.html
+++ b/app/views/9-3-3/esf_data_submitted.html
@@ -42,7 +42,7 @@
       </div>
     </details>
 
-		<p><a href="#">View reports on the Hub</a></p>
+		<!--<p><a href="#">View reports on the Hub</a></p>-->
 		<p><a href="./what_data_do_you_want_to_submit.html">Submit another data return</a></p>
     </div>
 	  <div class="govuk-grid-column-one-third">
