--- a/app/views/9-3-3/esf_data_submitted.html
+++ b/app/views/9-3-3/esf_data_submitted.html
@@ -1,9 +1,4 @@
-
-{% extends "./layout.html" %}
-
-{% block beforeContent %}
-  {% include "./includes/back_choose_file_to_upload_ESFA.html" %}
-{% endblock %}
+{% extends "./layout_noback_signedin.html" %}
 
 {% block pageTitle %}
   Data Collections Transformation Prototype
