--- a/app/views/9-3-3/ilr_data_submitted.html
+++ b/app/views/9-3-3/ilr_data_submitted.html
@@ -1,6 +1,4 @@
-
-{% extends "./layout.html" %}
-
+{% extends "./layout_noback_signedin.html" %}
 
 {% block pageTitle %}
   Data Collections Transformation Prototype
