--- a/app/views/9-3-3/theres_a_problem.html
+++ b/app/views/9-3-3/theres_a_problem.html
@@ -11,6 +11,7 @@
 
 {% block content %}
 
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
@@ -42,7 +43,7 @@
 		  <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
 		  <strong class="govuk-warning-text__text">
 		    <span class="govuk-warning-text__assistive">Warning</span>
-		    If you submit this file you may not be paid the correct amount for this period.
+		    You’ll only be paid for learners that do not have errors in their data.
 		  </strong>
 		</div>
 		
