--- a/app/views/9-3-3/choose_file_to_upload.html
+++ b/app/views/9-3-3/choose_file_to_upload.html
@@ -10,6 +10,18 @@
 {% endblock %}
 
 {% block content %}
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-full">
+    <div class="govuk-highlight-summary" aria-labelledby="highlight-summary-title" role="alert" tabindex="-1" data-module="highlight-summary">
+  <h2 class="govuk-highlight-summary__title" id="highlight-summary-title">
+    The RO2 ILR deadline is 4 October
+  </h2>
+  <div class="govuk-highlight-summary__body">
+	  <p>Make sure you’ve uploaded and submitted your final file before 5pm.</p>
+  </div>
+</div>
+  </div>
+</div>
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds"> 
