--- a/app/views/9-3-3/contents.html
+++ b/app/views/9-3-3/contents.html
@@ -38,6 +38,19 @@
 			<li><a href="your_files_uploading.html">Your file's uploading</a></li>		
 			<li><a href="ilr_data_submitted_clean.html">ILR data submitted (Clean file)</a></li>			
 		</ul>
+        
+        <h2 class="govuk-heading-l">ILR User Journey (Only ILR available to submit)</h2>
+        
+        <p>This journey misses out the 'what do you want to submit page'.</p>
+		
+		<ul class="govuk-list govuk-list--number">
+			<li><a href="start.html">Start page</a></li>
+		  	<li><a href="idams.html">IDAMS</a></li>		   	
+			<li><a href="choose_file_to_upload.html">Choose file to upload</a></li>
+			<li><a href="your_files_uploading.html">Your file's uploading</a></li>
+			<li><a href="theres_a_problem.html">There's a problem</a></li>			
+			<li><a href="ilr_data_submitted.html">ILR data submitted</a></li>			
+		</ul>
 
 		<h2 class="govuk-heading-l">EAS (Happy Path)</h2>
 
@@ -75,6 +88,13 @@
 			<li><a href="submit_data_error_1.html">Submit data (error state 1)</a></li>			
 			
 		</ul>--> 
+        
+        <h2 class="govuk-heading-l">Scenarios</h2>
+		
+		<ul class="govuk-list govuk-list--bullet">	
+			<li><a href="what_data_do_you_want_to_submit_closed.html">Return window is closed</a></li>
+			
+		</ul>
 		
 		<h2 class="govuk-heading-l">Service pages</h2>
 		
