--- a/app/views/9-3-3/includes/sidebar_start.html
+++ b/app/views/9-3-3/includes/sidebar_start.html
@@ -19,7 +19,7 @@
         </a>
       </li>
       <li>
-        <a href="#">
+        <a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/687491/ILRSpecification_2018_19_Appendix_A_March2018_v1.pdf">
           Timetable of submission deadlines
         </a>
       </li>                          
