--- a/app/views/9-3-3/start.html
+++ b/app/views/9-3-3/start.html
@@ -19,22 +19,24 @@
 		<p>Use this service to validate and submit:</p>
 		<ul class="govuk-list govuk-list--bullet">
 			<li>Individualised learner records (ILR)</li> 
-			<li>Earnings adjustment statements (EAS)</li> 
+			<!--<li>Earnings adjustment statements (EAS)</li>--> 
 			<li>ESF (European Social Fund) supplementary data</li>
 		</ul>
-
-		<p>You can also view and download reports for data you’ve submitted.</p>
-		<a href="./idams.html" role="button" class="govuk-button govuk-button--start">
-  Sign in
-</a>
-		<h2 class="govuk-heading-m">Before you start</h2>
+        
+        <h2 class="govuk-heading-m">Before you start</h2>
 
 		<p>You will need:</p>
 		<ul class="govuk-list govuk-list--bullet">
 			<li>your IdAMS (Information Management Services system) login details</li>
 			<li>an XML or Zip file to upload - for ILR data</li>
 			<li>a CSV file to upload - for ESF data</li>
-		</ul>      
+		</ul>  
+
+		<!--<p>You can also view and download reports for data you’ve submitted.</p>-->
+		<a href="./idams.html" role="button" class="govuk-button govuk-button--start">
+  Sign in
+</a>
+		    
     </div>
 	  <div class="govuk-grid-column-one-third">
         {% include "./includes/sidebar_start.html" %}
