--- a/app/views/9-3-3/what_data_do_you_want_to_submit.html
+++ b/app/views/9-3-3/what_data_do_you_want_to_submit.html
@@ -1,5 +1,5 @@
 
-{% extends "./layout.html" %}
+{% extends "./layout_noback_signedin.html" %}
 
 
 {% block pageTitle %}
@@ -19,11 +19,10 @@
   </div>
 </div>
   </div>
-</div>	
+</div>
 
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
-        
+    <div class="govuk-grid-column-two-thirds">       
         	
 		<form action="choose_file_to_upload" method="get" class="form">
 			<div class="govuk-form-group">
