--- a/app/views/9-3-3/what_data_do_you_want_to_submit_closed.html
+++ b/app/views/9-3-3/what_data_do_you_want_to_submit_closed.html
@@ -1,5 +1,5 @@
 
-{% extends "./layout.html" %}
+{% extends "./layout_noback_signedin.html" %}
 
 
 {% block pageTitle %}
@@ -9,7 +9,7 @@
 {% block content %}
 
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
+  <div class="govuk-grid-column-two-thirds">
     <div class="govuk-highlight-summary" aria-labelledby="highlight-summary-title" role="alert" tabindex="-1" data-module="highlight-summary">
   <h2 class="govuk-highlight-summary__title" id="highlight-summary-title">
     The RO2 ILR deadline is 4 October
@@ -23,9 +23,9 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-        
-        	
-		<p>It's closed mofos!</p>
+        <h1 class="govuk-heading-xl">Return period closed</h1>
+        <p>You cannot submit any data until the next return period (R03) opens on Monday 9 October.</p>       	
+
     </div>
 	  <div class="govuk-grid-column-one-third">
         {% include "./includes/sidebar_help.html" %}
