--- a/app/views/9-3-3/contents.html
+++ b/app/views/9-3-3/contents.html
@@ -106,7 +106,7 @@
 		
 		<ul class="govuk-list govuk-list--bullet">	
 			<li><a href="./ilr-email-for-provider.html">ILR email for provider (Processing)</a></li>
-            <li><a href="./ilr-email-for-provider-reports.html">ILR email for provider (View reports)</a></li>
+            <!--<li><a href="./ilr-email-for-provider-reports.html">ILR email for provider (View reports)</a></li>-->
 			
 		</ul>        
         <h2 class="govuk-heading-l">Feedback</h2>
