--- a/app/views/9-3-3/what_data_do_you_want_to_submit_closed.html
+++ b/app/views/9-3-3/what_data_do_you_want_to_submit_closed.html
@@ -13,14 +13,17 @@
     <div class="govuk-grid-column-two-thirds">
             <div class="govuk-highlight-summary" aria-labelledby="highlight-summary-title" role="alert" tabindex="-1" data-module="highlight-summary">
   <h2 class="govuk-highlight-summary__title" id="highlight-summary-title">
-    The RO2 ILR deadline is 4 October
+    Service desk helpline unavailable
   </h2>
   <div class="govuk-highlight-summary__body">
-	  <p>Make sure you’ve uploaded and submitted your final file before 5pm.</p>
+	  <p>The service desk helpline is currently unavailable. Please email <a href="mailto:sde.servicedesk@education.gov.uk">sde.servicedesk@education.gov.uk</a> for support.</p>
   </div>
 </div>
         <h1 class="govuk-heading-xl">Return period closed</h1>
-        <p>You cannot submit any data until the next return period (R03) opens on Monday 9 October.</p>       	
+        <p>You cannot submit any data until the next return period opens.</p>
+        <div class="govuk-inset-text">
+ Return period 03 opens Tuesday 9 October.
+</div>
 
     </div>
 	  <div class="govuk-grid-column-one-third">
