--- a/app/views/9-3-3/choose_file_to_upload.html
+++ b/app/views/9-3-3/choose_file_to_upload.html
@@ -15,10 +15,10 @@
   <div class="govuk-grid-column-two-thirds">
           <div class="govuk-highlight-summary" aria-labelledby="highlight-summary-title" role="alert" tabindex="-1" data-module="highlight-summary">
   <h2 class="govuk-highlight-summary__title" id="highlight-summary-title">
-    The RO2 ILR deadline is 4 October
+    Validation rule updated
   </h2>
   <div class="govuk-highlight-summary__body">
-	  <p>Make sure you’ve uploaded and submitted your final file before 5pm.</p>
+	  <p>The EPAOrgID_01 validation rule has been updated for R13. Data that has previously passed validation checks for this rule may now fail.</p>
   </div>
 </div>
     <form action="your_files_uploading" method="get" class="form">
