--- a/app/views/9-3-3/what_data_do_you_want_to_submit.html
+++ b/app/views/9-3-3/what_data_do_you_want_to_submit.html
@@ -13,10 +13,11 @@
     <div class="govuk-grid-column-two-thirds">
             <div class="govuk-highlight-summary" aria-labelledby="highlight-summary-title" role="alert" tabindex="-1" data-module="highlight-summary">
   <h2 class="govuk-highlight-summary__title" id="highlight-summary-title">
-    The RO2 ILR deadline is 4 October
+    Levy contracted apprenticeship payments
   </h2>
   <div class="govuk-highlight-summary__body">
-	  <p>Make sure you’ve uploaded and submitted your final file before 5pm.</p>
+	  <p>To be paid, there must be a matching, fully approved record already in the apprenticeship service.</p>
+      <p><a href="#">Find out more</a></p>
   </div>
 </div>
         	
