Change and reverse it

--- a/app/views/9-3-3/esf_data_submitted.html
+++ b/app/views/9-3-3/esf_data_submitted.html
@@ -28,16 +28,16 @@
     <details class="govuk-details">
       <summary class="govuk-details__summary">
         <span class="govuk-details__summary-text">
-           Wrong email address or email not arrived
+          Wrong email address or email not arrived
         </span>
       </summary>
       <div class="govuk-details__text">
         <p>If your email address is wrong, you will need to <a href="#">update it in your IdAMS account</a>.</p>
-        <p>If you haven't received an email, it may be in your junkmail folder. <a href="./reports.html">Check the R02 reports area</a> as your reports may still have been generated.</p>
+        <p>If you haven't received an email, it may be in your junkmail folder. <a href="#">View reports on the Hub</a> as your they may still have been generated.</p>
       </div>
     </details>
 
-		<!--<p><a href="#">View reports on the Hub</a></p>-->
+		<p><a href="#">View reports on the Hub</a></p>
 		<p><a href="./what_data_do_you_want_to_submit.html">Submit another data return</a></p>
     </div>
 	  <div class="govuk-grid-column-one-third">
