--- a/app/views/9-3-3/eas_data_submitted.html
+++ b/app/views/9-3-3/eas_data_submitted.html
@@ -27,7 +27,7 @@
 <p>At: <span class="govuk-!-font-weight-bold">3:17pm on Wednesday 6 August 2018</span></p> 
 
 <h3 class="govuk-heading-m">What happens next?</h3>
-    <!--<p><a href="#">View reports on the Hub</a></p>-->
+    <p><a href="#">View reports on the Hub</a></p>
 		<p><a href="./what_data_do_you_want_to_submit.html">Submit another data return</a></p>
     </div>
 	  <div class="govuk-grid-column-one-third">
