--- a/app/views/9-3-3/esf_data_submitted.html
+++ b/app/views/9-3-3/esf_data_submitted.html
@@ -25,15 +25,15 @@
 		<p>We’ve sent an email to sam.smith@college.ac.uk to confirm we’ve received your file.</p>
 		<p>We will email you again to let you know when your rule violation, funding and other reports are ready to view. This usually takes about 30 minutes.</p>
 
-    <details class="govuk-details">
+   <details class="govuk-details">
       <summary class="govuk-details__summary">
         <span class="govuk-details__summary-text">
           Wrong email address or email not arrived
         </span>
       </summary>
       <div class="govuk-details__text">
-        <p>If your email address is wrong, you will need to <a href="#">update it in your IdAMS account</a>.</p>
-        <p>If you haven't received an email, it may be in your junkmail folder. <a href="#">View reports on the Hub</a> as your they may still have been generated.</p>
+          <p>If your email address is wrong, you’ll need to <a href="#">update it in your IdAMS account</a>.</p>
+          <p>If you haven’t received an email, it may be in your junkmail folder. <a href="#">View reports in the Hub</a> as they may still have been generated.</p>
       </div>
     </details>
 
