--- a/app/views/9-3-3/ilr_data_submitted_clean.html
+++ b/app/views/9-3-3/ilr_data_submitted_clean.html
@@ -35,8 +35,8 @@
         </span>
       </summary>
       <div class="govuk-details__text">
-        <p>If your email address is wrong, you will need to <a href="#">update it in your IdAMS account</a>.</p>
-        <p>If you haven't received an email, it may be in your junkmail folder. <a href="#">View reports on the Hub</a> as your they may still have been generated.</p>
+          <p>If your email address is wrong, you’ll need to <a href="#">update it in your IdAMS account</a>.</p>
+          <p>If you haven’t received an email, it may be in your junkmail folder. <a href="#">View reports in the Hub</a> as they may still have been generated.</p>
       </div>
     </details>
 
