--- a/app/views/9-3-3/contents.html
+++ b/app/views/9-3-3/contents.html
@@ -52,7 +52,7 @@
 			<li><a href="ilr_data_submitted.html">ILR data submitted</a></li>			
 		</ul>
 
-		<h2 class="govuk-heading-l">EAS (Happy Path)</h2>
+		<!--<h2 class="govuk-heading-l">EAS (Happy Path)</h2>
 
 		<ul class="govuk-list govuk-list--number">
 			<li><a href="start.html">Start page</a></li>
@@ -63,7 +63,7 @@
 			<li><a href="add_claim_details.html">Add claim details</a></li>
 			<li><a href="manage_your_eas_added.html">Claim added</a></li>
             <li><a href="eas_data_submitted.html">EAS data submitted</a></li>
-		</ul>
+		</ul>-->
 
 
 		<h2 class="govuk-heading-l">ESF User Journey (Happy Path)</h2>
