--- a/app/views/9-3-3/contents.html
+++ b/app/views/9-3-3/contents.html
@@ -92,7 +92,7 @@
         <h2 class="govuk-heading-l">Scenarios</h2>
 		
 		<ul class="govuk-list govuk-list--bullet">	
-			<li><a href="what_data_do_you_want_to_submit_closed.html">Return window is closed</a></li>
+			<li><a href="what_data_do_you_want_to_submit_closed.html">Return window is closed (to appear after a closed collection is chosen)</a></li>
 			
 		</ul>
 		
