--- a/app/views/9-3-3/includes/sidebar_help_related_ESFA.html
+++ b/app/views/9-3-3/includes/sidebar_help_related_ESFA.html
@@ -35,12 +35,12 @@
           <nav role="navigation" aria-labelledby="subsection-title">
             <ul class="govuk-list govuk-!-font-size-16">
               <li>
-                <a href="https://www.gov.uk/government/publications/ilr-guides-and-templates-for-2017-to-2018">
+                <a href="https://www.gov.uk/government/publications/ilr-guides-and-templates-for-2017-to-2018" target="_blank">
                   Provider support manual for 2016 to 2017  
                 </a>
               </li> 
 				      <li>
-                <a href="https://www.gov.uk/government/publications/sfa-supplementary-data-collection">
+                <a href="https://www.gov.uk/government/publications/sfa-supplementary-data-collection" target="_blank">
                   ESFA: supplementary data collection guidance  
                 </a>
               </li>
