--- a/app/views/9-3-3/includes/sidebar_start.html
+++ b/app/views/9-3-3/includes/sidebar_start.html
@@ -14,12 +14,12 @@
   <nav role="navigation" aria-labelledby="subsection-title">
     <ul class="govuk-list govuk-!-font-size-16">
       <li>
-        <a href="https://www.gov.uk/guidance/how-to-become-an-approved-training-provider-and-bid-for-funding">
+        <a href="https://www.gov.uk/guidance/how-to-become-an-approved-training-provider-and-bid-for-funding" target="_blank">
           How to become an approved training provider 
         </a>
       </li>
       <li>
-        <a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/687491/ILRSpecification_2018_19_Appendix_A_March2018_v1.pdf">
+        <a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/687491/ILRSpecification_2018_19_Appendix_A_March2018_v1.pdf" target="_blank">
           Timetable of submission deadlines
         </a>
       </li>                          
