--- a/app/views/KitKat-9-4-1/choose_file_to_upload.html
+++ b/app/views/KitKat-9-4-1/choose_file_to_upload.html
@@ -12,7 +12,17 @@
 {% block content %}
 
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds"> 
+    <div class="govuk-grid-column-two-thirds">
+            <div class="govuk-highlight-summary" aria-labelledby="highlight-summary-title" role="alert" tabindex="-1" data-module="highlight-summary">
+  <h2 class="govuk-highlight-summary__title" id="highlight-summary-title">
+    Levy contracted apprenticeship payments
+  </h2>
+  <div class="govuk-highlight-summary__body">
+	  <p>To be paid, there must be a matching, fully approved record already in the apprenticeship service.</p>
+      <p><a href="#">Find out more</a></p>
+  </div>
+</div>
+        
     <form action="your_files_uploading" method="get" class="form">
 	  <h1 class="govuk-heading-xl">Choose file to upload <span class="govuk-caption-xl">Return Period 2 (R02)</span></h1>
 		<p>Before uploading your file you should make sure that:</p>
