--- a/app/views/KitKat-9-4-1/contents.html
+++ b/app/views/KitKat-9-4-1/contents.html
@@ -65,6 +65,13 @@
 			<li><a href="esf_data_submitted.html">ESF data submitted</a></li>
 			<li><a href="reports.html">Reports</a></li>
 		</ul>
+        
+        <h2 class="govuk-heading-l">Scenarios</h2>
+		
+		<ul class="govuk-list govuk-list--bullet">	
+			<li><a href="what_data_do_you_want_to_submit_closed.html">Return window is closed (to appear after a closed collection is chosen)</a></li>
+			
+		</ul>
 
 		<h2 class="govuk-heading-l">Error states and fails</h2>
 		
