--- a/app/views/KitKat-9-4-1/exit-survey.html
+++ b/app/views/KitKat-9-4-1/exit-survey.html
@@ -8,6 +8,19 @@
 
 {% block content %}
 
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-highlight-summary" aria-labelledby="highlight-summary-title" role="alert" tabindex="-1" data-module="highlight-summary">
+  <h2 class="govuk-highlight-summary__title" id="highlight-summary-title">
+    Signed out
+  </h2>
+  <div class="govuk-highlight-summary__body">
+	  <p>You have successfully signed out.</p>
+  </div>
+</div>
+  </div>
+</div>	
+
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">		
 		
