--- a/app/views/KitKat-9-4-1/what_data_do_you_want_to_submit.html
+++ b/app/views/KitKat-9-4-1/what_data_do_you_want_to_submit.html
@@ -8,21 +8,19 @@
 
 {% block content %}
 
-<div class="govuk-grid-row">
-  <div class="govuk-grid-column-full">
-    <div class="govuk-highlight-summary" aria-labelledby="highlight-summary-title" role="alert" tabindex="-1" data-module="highlight-summary">
-  <h2 class="govuk-highlight-summary__title" id="highlight-summary-title">
-    The RO2 ILR deadline is 4 October
-  </h2>
-  <div class="govuk-highlight-summary__body">
-	  <p>Make sure you’ve uploaded and submitted your final file before 5pm.</p>
-  </div>
-</div>
-  </div>
-</div>	
+
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+            <div class="govuk-highlight-summary" aria-labelledby="highlight-summary-title" role="alert" tabindex="-1" data-module="highlight-summary">
+  <h2 class="govuk-highlight-summary__title" id="highlight-summary-title">
+    Levy contracted apprenticeship payments
+  </h2>
+  <div class="govuk-highlight-summary__body">
+	  <p>To be paid, there must be a matching, fully approved record already in the apprenticeship service.</p>
+      <p><a href="#">Find out more</a></p>
+  </div>
+</div>
         
         	
 		<form action="choose_file_to_upload" method="get" class="form">
