--- a/app/views/index.html
+++ b/app/views/index.html
@@ -164,6 +164,15 @@
   Start now
 </a></td>
     </tr>
+       <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">Previous prototype for Alpha</th>
+		<td class="govuk-table__cell ">
+			
+ </td>
+      <td class="govuk-table__cell "><a href="https://datacollectionsalpha.herokuapp.com/">Homepage</a></td>
+		
+
+    </tr>
    
   </tbody>
 </table>
