--- a/app/views/KitKat-9-4-1/esf_choose_file_to_upload.html
+++ b/app/views/KitKat-9-4-1/esf_choose_file_to_upload.html
@@ -35,12 +35,23 @@
       <label class="govuk-label govuk-!-font-weight-bold" for="file-upload-1">
         Upload a file
       </label>
+          <span id="upload-hint" class="govuk-hint">
+      You can upload 3 files at a time
+    </span>
       <input class="govuk-file-upload" id="file-upload-1" name="file-upload-1" type="file">
-      <input type="hidden" name="whattosubmit" value="{{ data['whattosubmit'] }}">          
-    </div>
-    <button class="govuk-button">
+      <input type="hidden" name="whattosubmit" value="{{ data['whattosubmit'] }}">
+           </div>      
+         <div class="govuk-form-group">
+          <input class="govuk-file-upload" id="file-upload-1" name="file-upload-2" type="file">
+      <input type="hidden" name="whattosubmit" value=""> 
+        </div>        
+        <div class="govuk-form-group">
+          <input class="govuk-file-upload" id="file-upload-1" name="file-upload-3" type="file">
+      <input type="hidden" name="whattosubmit" value="">    
+        </div>
+    <p><a href="your_files_uploading_esf.html" class="govuk-button">
       Upload file
-    </button>
+        </a></p>
   </form>
   </div>
 
