--- a/app/views/KitKat-9-4-1/your_files_uploading_esf.html
+++ b/app/views/KitKat-9-4-1/your_files_uploading_esf.html
@@ -16,17 +16,17 @@
     Your file’s uploading
   </h2>
   <div class="govuk-highlight-summary__body">
-	  <p>{{ uploadingFile }}</p>
-	  <p>95% uploaded</p>
-   <p><progress value="95" max="100"></progress></p>
-	  <p><a href="#" onclick="goBack()">Cancel</a></p>
+	  <p>SUPPDATA-12345678-ESF-8976-20180806-151209.CSV</p>
+	  <p>80% uploaded</p>
+   <p><progress value="80" max="100"></progress></p>
+	  <p><a href="./esf_choose_file_to_upload.html">Cancel</a></p>
   </div>
 </div>
         
         <script type="text/javascript">   
     function Redirect() 
     {  
-        window.location="{{continueTo}}"; 
+        window.location="esf_data_submitted.html"; 
     } 
     setTimeout('Redirect()', 5000);   
 </script>
