--- a/app/views/index.html
+++ b/app/views/index.html
@@ -28,7 +28,7 @@
   </thead>
   <tbody class="govuk-table__body">
      <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="row">Kit Kat 9.4.1 - This is not MVS, for testing only.</th>
+         <th class="govuk-table__header" scope="row">Kit Kat 9.4.1<p>This is not MVS, for testing only.</p></th>
         <td class="govuk-table__cell ">
           <ul class="govuk-list govuk-list--bullet">
            <p>We added:</p>
@@ -42,7 +42,7 @@
     </tr>
       
        <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="row">Kit Kat 9.4.0  - This is not MVS, for testing only.</th>
+           <th class="govuk-table__header" scope="row">Kit Kat 9.4.0 <p>This is not MVS, for testing only.</p></th>
         <td class="govuk-table__cell ">
           <ul class="govuk-list govuk-list--bullet">
             <p>We added:</p>
