--- a/app/views/KitKat-9-4-1/eas_data_submitted.html
+++ b/app/views/KitKat-9-4-1/eas_data_submitted.html
@@ -1,5 +1,5 @@
 
-{% extends "./layout_noback.html" %}
+{% extends "./layout_noback_signedin.html" %}
 
 {% block beforeContent %}
   {% include "./includes/back_choose_file_to_upload_ESFA.html" %}
