--- a/app/views/index.html
+++ b/app/views/index.html
@@ -32,9 +32,9 @@
         <td class="govuk-table__cell ">
           <ul class="govuk-list govuk-list--bullet">
            <p>We added:</p>
-            <!--<li>multiple uploads for ESF</li>
+            <li>multiple uploads for ESF</li>
             <li>iterated uploading page</li>
-              <li>reports as a seperate serivce</li>-->
+              <!--<li>reports as a seperate serivce</li>-->
             </ul>
         </td>
         <td class="govuk-table__cell "><a href="KitKat-9-4-1/contents.html">Contents</a></td>
