updating kitkat reports

--- a/app/views/KitKat-9-4-1/includes/sidebar_reports.html
+++ b/app/views/KitKat-9-4-1/includes/sidebar_reports.html
@@ -9,21 +9,16 @@
 	<p>Email:  <a href="sde.servicedesk@education.gov.uk">sde.servicedesk@education.gov.uk</a></p>
 
 	<h2 class="govuk-heading-m" id="subsection-title">
-           Submit learner data
+           Upload data
           </h2>
           <nav role="navigation" aria-labelledby="subsection-title">
             <ul class="govuk-list govuk-!-font-size-16">
               <li>
                 <a href="./what_data_do_you_want_to_submit.html">
-                  Resubmit data
+                  Submit another data return
                 </a>
-              </li> 
-				<!--<li>
-                <a href="./step-by-step.html">
-                  Submit learner data:step-by-step
-                </a>
-              </li>-->				
+              </li>				
             </ul>
-          </nav>		
+          </nav>
 			 
         </aside>
