--- a/app/views/index.html
+++ b/app/views/index.html
@@ -34,7 +34,7 @@
            <p>We added:</p>
             <li>multiple uploads for ESF</li>
             <li>iterated uploading page</li>
-              <!--<li>reports as a seperate serivce</li>-->
+              <li>iteration of the reports pages</li>
             </ul>
         </td>
         <td class="govuk-table__cell "><a href="KitKat-9-4-1/contents.html">Contents</a></td>
@@ -166,10 +166,10 @@
     </tr>
        <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">Previous prototype for Alpha</th>
-		<td class="govuk-table__cell ">
-			
+		<td class="govuk-table__cell "><a href="https://datacollectionsalpha.herokuapp.com/">Homepage</a>
  </td>
-      <td class="govuk-table__cell "><a href="https://datacollectionsalpha.herokuapp.com/">Homepage</a></td>
+      <td class="govuk-table__cell "></td>
+           <td class="govuk-table__cell "></td>
 		
 
     </tr>
