--- a/app/views/KitKat-9-4-1/reports.html
+++ b/app/views/KitKat-9-4-1/reports.html
@@ -11,7 +11,8 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">		
 		<h1 class="govuk-heading-xl">Reports <span class="govuk-caption-xl">Return Period 2 (R02)</span></h1>
-        <p><a href="#">Download all your reports</a> (Zip, 1.3MB) for this return period. You can also <a href="previous-reports">view your previous reports</a>.
+        <p><a href="#">Download all your reports</a> (Zip, 1.3MB) for this return period.</p>
+        <p>You can also <a href="submission_history.html">view your submission history</a>.
 </p>
      
 				<details class="govuk-details">
@@ -25,35 +26,59 @@
 
   </div>
 </details>
-        <h2 class="govuk-heading-m">Submission history</h2>
-        <p class="govuk-body">File submissions for the past 30 days.</p>
+        
+       <h2 class="govuk-heading-l">Reports history</h2>
+        <p>View your final reports from each period at the time of close.</p>
+        <h3 class="govuk-heading-m">Academic year 2018 to 2019</h3>
+       
         <table class="govuk-table">
-  <caption class="govuk-table__caption govuk-visually-hidden">Dates and file name</caption>
+  <caption class="govuk-table__caption govuk-visually-hidden">Return period and download</caption>
   <thead class="govuk-table__head">
     <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="col">Date</th>
-      <th class="govuk-table__header" scope="col">File name</th>
-      <th class="govuk-table__header" scope="col">Uploaded by</th>
+      <th class="govuk-table__header" scope="col">Return period</th>
+      <th class="govuk-table__header" scope="col">Download</th>
+     
     </tr>
   </thead>
   <tbody class="govuk-table__body">
     <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="row">5 September 2018</th>
-      <td class="govuk-table__cell ">ILR-12345678-1819-20180806-05092018-02.XML</td>
-        <td class="govuk-table__cell ">Sam Smith</td>
+      <th class="govuk-table__header" scope="row">R01</th>
+        <td class="govuk-table__cell"><a href="#">ILR-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.3MB)</td>        
+    </tr>    
+  </tbody>
+</table>
+				
+        <h3 class="govuk-heading-m">Academic year 2017 to 2018</h3>
+       
+        <table class="govuk-table">
+  <caption class="govuk-table__caption govuk-visually-hidden">Return period and download</caption>
+  <thead class="govuk-table__head">
+    <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="col">Return period</th>
+      <th class="govuk-table__header" scope="col">Download</th>
+     
+    </tr>
+  </thead>
+  <tbody class="govuk-table__body">
+    <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">R14</th>
+        <td class="govuk-table__cell"><a href="#">ILR-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.3MB)</td>        
     </tr>
     <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="row">4 September 2018</th>
-      <td class="govuk-table__cell ">SUPPDATA-12345678-ESF-8976-20180806-151209.CSV</td>
-        <td class="govuk-table__cell ">Marcy Jones</td>
+      <th class="govuk-table__header" scope="row">R13</th>
+      <td class="govuk-table__cell"><a href="#">ILR-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.2MB)</td>        
     </tr>
     <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="row">20 August 2018</th>
-      <td class="govuk-table__cell ">ILR-12345678-1819-20180806-05092018-01.XML</td>
-        <td class="govuk-table__cell ">Sam Smith</td>
+      <th class="govuk-table__header" scope="row">R12</th>
+      <td class="govuk-table__cell"><a href="#">ILR-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.8MB)</td>        
+    </tr>
+       <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">R11</th>
+      <td class="govuk-table__cell"><a href="#">ILR-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.1MB)</td>        
     </tr>
   </tbody>
 </table>
+        
     </div>
 	  <div class="govuk-grid-column-one-third">
         {% include "./includes/sidebar_reports.html" %}
