--- a/app/views/KitKat-9-4-1/submission_history.html
+++ b/app/views/KitKat-9-4-1/submission_history.html
@@ -33,7 +33,7 @@
     </tr>
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">4 September 2018</th>
-        <td class="govuk-table__cell">ESF Sup data</td>
+        <td class="govuk-table__cell">ESF</td>
         <td class="govuk-table__cell"><a href="#">SUPPDATA-12345678-ESF-8976-20180806-151209.CSV</a></td>
         <td class="govuk-table__cell">Marcy Jones</td>
     </tr>
