Created single upload field and updated button text

--- a/app/views/KitKat-9-4-1/esf_choose_file_to_upload.html
+++ b/app/views/KitKat-9-4-1/esf_choose_file_to_upload.html
@@ -28,29 +28,29 @@
 		<ul class="govuk-list govuk-list--bullet">
       <li>it’s in a CSV format</li>
       <li>it’s using the <a href="#">ESF non-ILR data return template</a></li>
-			<li>the data it contains is as complete as possible</li>
-			<li>the data it contains is as accurate as possible</li>
+      <li>the data it contains is as complete as possible</li>
+      <li>the data it contains is as accurate as possible</li>
 		</ul>
 	  <div class="govuk-form-group">
       <label class="govuk-label govuk-!-font-weight-bold" for="file-upload-1">
         Upload a file
       </label>
           <span id="upload-hint" class="govuk-hint">
-      You can upload 3 files at a time
+      You can upload more than one file at a time
     </span>
       <input class="govuk-file-upload" id="file-upload-1" name="file-upload-1" type="file">
       <input type="hidden" name="whattosubmit" value="{{ data['whattosubmit'] }}">
            </div>      
-         <div class="govuk-form-group">
+         /*<div class="govuk-form-group">
           <input class="govuk-file-upload" id="file-upload-1" name="file-upload-2" type="file">
       <input type="hidden" name="whattosubmit" value=""> 
-        </div>        
-        <div class="govuk-form-group">
+	    </div>*/        
+        /*<div class="govuk-form-group">
           <input class="govuk-file-upload" id="file-upload-1" name="file-upload-3" type="file">
       <input type="hidden" name="whattosubmit" value="">    
-        </div>
+        </div>*/
     <p><a href="your_files_uploading_esf.html" class="govuk-button">
-      Upload file
+      Upload files
         </a></p>
   </form>
   </div>
