Added a second file name

--- a/app/views/KitKat-9-4-1/your_files_uploading_esf.html
+++ b/app/views/KitKat-9-4-1/your_files_uploading_esf.html
@@ -16,7 +16,8 @@
     Your file’s uploading
   </h2>
   <div class="govuk-highlight-summary__body">
-	  <p>SUPPDATA-12345678-ESF-8976-20180806-151209.CSV</p>
+	  <p>SUPPDATA-12345678-ESF-8976-20180806-151209.CSV
+	  SUPPDATA-12345678-ESF-8976-20180806-151210.CSV</p>
 	  <p>80% uploaded</p>
    <p><progress value="80" max="100"></progress></p>
 	  <p><a href="./esf_choose_file_to_upload.html">Cancel</a></p>
