--- a/app/views/KitKat-9-4-1/esf_data_submitted.html
+++ b/app/views/KitKat-9-4-1/esf_data_submitted.html
@@ -22,7 +22,8 @@
            
           </div>
         </div>		
-<p>File: <span class="govuk-!-font-weight-bold">SUPPDATA-12345678-ESF-8976-20180806-151209.CSV</span></p>
+<p>File 1: <span class="govuk-!-font-weight-bold">SUPPDATA-12345678-ESF-8976-20180806-151209.CSV</span></p>
+<p>File 2: <span class="govuk-!-font-weight-bold">SUPPDATA-12345678-ESF-8976-20180806-151210.CSV</span></p>
 <p>Submitted by: <span class="govuk-!-font-weight-bold">Sam Smith</span></p>
 <p>At: <span class="govuk-!-font-weight-bold">3:17pm on Wednesday 6 August 2018</span></p> 
 
