--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -167,6 +167,12 @@ $govuk-global-styles: true;
 	margin-bottom: 30px;
 	border: 4px solid #005ea5
 }
+.govuk-highlight-summary-yellow {
+	color: #0b0c0c;
+	padding: 15px;
+	margin-bottom: 30px;
+	border: 4px solid #ffbf47
+}
 @media print {
 	.govuk-highlight-summary {
 		color: #000
