--- a/app/views/9-3-3/contents.html
+++ b/app/views/9-3-3/contents.html
@@ -78,21 +78,23 @@
 			
 		</ul>
 
-		<!--<h2 class="govuk-heading-l">Error states and fails</h2>
+	<h2 class="govuk-heading-l">ILR User Journey (Period is closed)</h2>
 		
-		<ul class="govuk-list govuk-list--bullet">	
-			<li><a href="what_data_do_you_want_to_submit_error.html">What data do you want to submit? (error state)</a></li>
-			<li><a href="choose_file_to_upload_error_1.html">Choose file to upload (error state 1)</a></li>
-			<li><a href="choose_file_to_upload_error_2.html">Choose file to upload (error state 2)</a></li>
-			<li><a href="upload_file_failed.html">File upload failed</a></li>
-			<li><a href="submit_data_error_1.html">Submit data (error state 1)</a></li>			
-			
-		</ul>--> 
+		<ul class="govuk-list govuk-list--number">
+			<li><a href="start.html">Start page</a></li>
+		  	<li><a href="idams.html">IDAMS</a></li>
+		   	<li><a href="what_data_do_you_want_to_submit.html">What data do you want to submit?</a></li>
+			<li><a href="choose_file_to_upload_closed.html">Choose file to upload</a></li>
+			<li><a href="your_files_uploading_closed.html">Your file's uploading</a></li>
+			<li><a href="theres_a_problem_closed.html">There's a problem</a></li>			
+			<li><a href="ilr_data_submitted_closed.html">ILR data submitted</a></li>
+            <li><a href="./ilr-email-for-provider-closed.html">ILR email for providers (closed period)</a></li>
+		</ul>
         
         <h2 class="govuk-heading-l">Scenarios</h2>
 		
 		<ul class="govuk-list govuk-list--bullet">	
-			<li><a href="what_data_do_you_want_to_submit_closed.html">Return window is closed (to appear after a closed collection is chosen)</a></li>
+			<li><a href="what_data_do_you_want_to_submit_closed.html">Return window is closed (to appear after ESF is chosen)</a></li>
 			
 		</ul>
 		
@@ -107,6 +109,7 @@
 		<ul class="govuk-list govuk-list--bullet">	
 			<li><a href="./ilr-email-for-provider.html">ILR email for provider (Processing)</a></li>
             <li><a href="./ilr-email-for-provider-reports.html">ILR email for provider (View reports)</a></li>
+            <li><a href="./ilr-email-for-provider-closed.html">ILR email for providers (closed period)</a></li>
 			
 		</ul>        
         <h2 class="govuk-heading-l">Feedback</h2>
