--- a/app/views/9-3-3/ilr_data_submitted_closed.html
+++ b/app/views/9-3-3/ilr_data_submitted_closed.html
@@ -20,11 +20,10 @@
 <p>File: <span class="govuk-!-font-weight-bold">ILR-12345678-1819-20180806-151209-02.XML</span></p>
 <p>Submitted by: <span class="govuk-!-font-weight-bold">Sam Smith</span></p>
 <p>At: <span class="govuk-!-font-weight-bold">3:17pm on Wednesday 6 August 2018</span></p>
-         <p>We will process your file when the next return period opens on 10 October 2018.</p>
-
+        
 <h3 class="govuk-heading-m">What happens next?</h3>
 		<p>We’ve sent an email to sam.smith@college.ac.uk to confirm we’ve received your file.</p>
-		<p>We will email you again to let you know when your funding breakdown for R02 and related reports are ready to view. This usually takes about 30 minutes.</p>
+		<p>We will email you again to let you know when your funding breakdown for R03 and related reports are ready to view. This will be after the next return period opens on 10 October.</p>
 
     <details class="govuk-details">
       <summary class="govuk-details__summary">
