--- a/app/views/9-3-3/theres_a_problem_closed.html
+++ b/app/views/9-3-3/theres_a_problem_closed.html
@@ -23,6 +23,7 @@
 		    <ul class="govuk-list govuk-error-summary__list">
 		      <li>
 		        <p>There are errors and warnings for the learner data in your file.</p>
+                  <p>If you submit this file, we’ll process it when the next return period opens on 10 October.</p>
 		      </li>
 		    </ul>
 		  </div>
@@ -38,7 +39,7 @@
 
 		
 		<p><a href="#">Download detailed report </a> (CSV, 78KB) showing all errors and warnings</p>
-        <p>We will process your file when the next return period opens on 10 October 2018.</p>
+       
 
 		<div class="govuk-warning-text">
 		  <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
