--- a/app/views/9-3-3/choose_file_to_upload_closed.html
+++ b/app/views/9-3-3/choose_file_to_upload_closed.html
@@ -19,7 +19,7 @@
     ILR period closed
   </h2>
   <div class="govuk-highlight-summary__body">
-	  <p>You can still upload a file for us to process when it's open.</p>
+	  <p>We’ll keep a copy of the last file you’ve uploaded and process it when the next return period opens on 10 October.</p>
   </div>
 </div>
     <form action="your_files_uploading" method="get" class="form">
