--- a/app/views/9-3-3/contents.html
+++ b/app/views/9-3-3/contents.html
@@ -78,7 +78,7 @@
 			
 		</ul>
 
-	<h2 class="govuk-heading-l">ILR User Journey (Period is closed)</h2>
+	<!--<h2 class="govuk-heading-l">ILR User Journey (Period is closed)</h2>
 		
 		<ul class="govuk-list govuk-list--number">
 			<li><a href="start.html">Start page</a></li>
@@ -89,7 +89,7 @@
 			<li><a href="theres_a_problem_closed.html">There's a problem</a></li>			
 			<li><a href="ilr_data_submitted_closed.html">ILR data submitted</a></li>
             <li><a href="./ilr-email-for-provider-closed.html">ILR email for providers (closed period)</a></li>
-		</ul>
+		</ul>-->
         
         <h2 class="govuk-heading-l">Scenarios</h2>
 		
