--- a/app/views/index.html
+++ b/app/views/index.html
@@ -66,7 +66,7 @@
          <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">9.3.4</th>
         <td class="govuk-table__cell ">
-         Stopped version for MVS - added 'return period closed' jounrney
+         Stopped version for MVS - added 'return period closed' journey
         </td>
         <td class="govuk-table__cell "><a href="9-3-4/contents.html">Contents</a></td>
         <td class="govuk-table__cell "><a href="./9-3-4/start.html">Start now</a></td>
