--- a/app/views/index.html
+++ b/app/views/index.html
@@ -76,6 +76,18 @@
         <td class="govuk-table__cell "><a href="KitKat-9-4-0/contents.html">Contents</a></td>
         <td class="govuk-table__cell "><a href="KitKat-9-4-0/start.html">Start now</a></td>
     </tr>
+      <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">9.3.5</th>
+        <td class="govuk-table__cell ">
+            <p>Stopped version for MVS</p>
+            <ul class="govuk-list govuk-list--bullet">
+                <li>added simple reports journey</li>
+                <li>update to email to point to reports page</li>
+            </ul>
+        </td>
+        <td class="govuk-table__cell "><a href="9-3-5/contents.html">Contents</a></td>
+        <td class="govuk-table__cell "><a href="./9-3-5/start.html">Start now</a></td>
+    </tr>
          <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">9.3.4</th>
         <td class="govuk-table__cell ">
@@ -95,8 +107,8 @@
           <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">9.3.2</th>
         <td class="govuk-table__cell ">
-          <ul class="govuk-list govuk-list--bullet">
-            <p>We:</p>
+            We:
+          <ul class="govuk-list govuk-list--bullet">            
             <li>added the EAS journey</li>
           </ul>
         </td>
@@ -106,8 +118,8 @@
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">9.3.1</th>
         <td class="govuk-table__cell ">
-          <ul class="govuk-list govuk-list--bullet">
-            <p>We:</p>
+            We:
+          <ul class="govuk-list govuk-list--bullet">            
             <li>added the EAS journey</li>
           </ul>
         </td>
@@ -117,8 +129,9 @@
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">9.3.0</th>
         <td class="govuk-table__cell ">
+            We:
           <ul class="govuk-list govuk-list--bullet">
-            <p>We:</p>
+            
             <li>added EAS screenshots</li>
             <li>enabled the ESF journey</li>
           </ul>
@@ -129,10 +142,10 @@
      <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">9.2.5</th>
         <td class="govuk-table__cell ">
-          <ul class="govuk-list govuk-list--bullet">
-            <p></p>
-            <p>Stopped version based on 9-2-0</p>
-          </ul>
+          
+            
+         Stopped version based on 9-2-0
+    
         </td>
         <td class="govuk-table__cell "><a href="9-2-5/contents.html">Contents</a></td>
         <td class="govuk-table__cell "><a href="./9-2-5/start.html">Start now</a></td>
@@ -140,10 +153,10 @@
 	  <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">9.2.0</th>
     		<td class="govuk-table__cell ">
-          <ul class="govuk-list govuk-list--bullet">
-    			  <p>We:</p>
+                We:
+          <ul class="govuk-list govuk-list--bullet">    			  
             <li>updated the content</li>
-            <p>(inc. addition of error summary<br>& warning to the 'There's a problem'<br>page)</p>
+              <li>(inc. addition of error summary<br>& warning to the 'There's a problem'<br>page)</li>
           </ul>
         </td>
         <td class="govuk-table__cell "><a href="9-2-0/contents.html">Contents</a></td>
@@ -152,10 +165,10 @@
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">9.1.5</th>
         <td class="govuk-table__cell ">
-          <ul class="govuk-list govuk-list--bullet">
-            <p></p>
-            <p>Stopped version based on 9-1-0</p>
-          </ul>
+         
+         
+          Stopped version based on 9-1-0
+
         </td>
         <td class="govuk-table__cell "><a href="9-1-5/contents.html">Contents</a></td>
         <td class="govuk-table__cell "><a href="./9-1-5/start.html">Start now</a></td>
@@ -163,8 +176,9 @@
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">9.1.0</th>
         <td class="govuk-table__cell ">
+            We:
           <ul class="govuk-list govuk-list--bullet">
-            <p>We:</p>
+            
             <li>updated the content</li>
             <li>added EAS and ESF flow</li>  
           </ul>
@@ -174,8 +188,9 @@
     </tr>
     <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">9.0.0</th>
-		<td class="govuk-table__cell "><ul class="govuk-list govuk-list--bullet">
-			<p>We:</p>
+		<td class="govuk-table__cell ">
+			We:
+            <ul class="govuk-list govuk-list--bullet">
   <li>updated the content</li>
   <li>split out error and submission pages</li>
   <li>used the new design system</li>
