--- a/app/views/KitKat-9-4-2/reports.html
+++ b/app/views/KitKat-9-4-2/reports.html
@@ -10,74 +10,33 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">		
-		<h1 class="govuk-heading-xl">Reports <span class="govuk-caption-xl">Return Period 2 (R02)</span></h1>
-        <p><a href="#">Download all your reports</a> (Zip, 1.3MB) for this return period.</p>
-        <p>You can also <a href="submission_history.html">view your submission history</a>.
-</p>
-     
-				<details class="govuk-details">
-  <summary class="govuk-details__summary">
-    <span class="govuk-details__summary-text">
-     Problems with the figures?
-    </span>
-  </summary>
-  <div class="govuk-details__text">
-	  You can <a href="./choose_file_to_upload.html">re-submit your file</a> or contact us to let us know.
-
-  </div>
-</details>
+		<h1 class="govuk-heading-xl">Reports</h1>
         
-       <h2 class="govuk-heading-l">Reports history</h2>
-        <p>View your final reports from each period at the time of close.</p>
-        <h3 class="govuk-heading-m">Academic year 2018 to 2019</h3>
+        <p>Periods are open, lets see what we got.</p>
+        
+        <h2 class="govuk-heading-l">Return Period 2 (R02)</h2>
+        
        
-        <table class="govuk-table">
-  <caption class="govuk-table__caption govuk-visually-hidden">Return period and download</caption>
-  <thead class="govuk-table__head">
-    <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="col">Return period</th>
-      <th class="govuk-table__header" scope="col">Download</th>
+        <p><a href="#">Download business reports</a> (Zip, 1.3MB)</p> 
+         <p><a href="#">Download error reports</a> (Zip, 1.3MB) </p>
+        
+         <h2 class="govuk-heading-l">Return Period 14 (R14)</h2>
+      
+        <p><a href="#">Download business reports</a> (Zip, 1.3MB)</p> 
+         <p><a href="#">Download error reports</a> (Zip, 1.3MB) </p>
+        
+        <h2 class="govuk-heading-l">Other things to do</h2>
+         <p>You can do lots of things here, lets list them!</p>
+        <p>If you need to correct the data you've submitted, <a href="choose_file_to_upload.html">submit another ILR file</a>.</p>
+        <p>You can also <a href="submission_history.html">view your submission history</a> and <a href="./previous-reports.html">reports history</a>.
+</p>
+
+    
+
+
+ 
+        
      
-    </tr>
-  </thead>
-  <tbody class="govuk-table__body">
-    <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="row">R01</th>
-        <td class="govuk-table__cell"><a href="#">ILR-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.3MB)</td>        
-    </tr>    
-  </tbody>
-</table>
-				
-        <h3 class="govuk-heading-m">Academic year 2017 to 2018</h3>
-       
-        <table class="govuk-table">
-  <caption class="govuk-table__caption govuk-visually-hidden">Return period and download</caption>
-  <thead class="govuk-table__head">
-    <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="col">Return period</th>
-      <th class="govuk-table__header" scope="col">Download</th>
-     
-    </tr>
-  </thead>
-  <tbody class="govuk-table__body">
-    <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="row">R14</th>
-        <td class="govuk-table__cell"><a href="#">ILR-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.3MB)</td>        
-    </tr>
-    <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="row">R13</th>
-      <td class="govuk-table__cell"><a href="#">ILR-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.2MB)</td>        
-    </tr>
-    <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="row">R12</th>
-      <td class="govuk-table__cell"><a href="#">ILR-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.8MB)</td>        
-    </tr>
-       <tr class="govuk-table__row">
-      <th class="govuk-table__header" scope="row">R11</th>
-      <td class="govuk-table__cell"><a href="#">ILR-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.1MB)</td>        
-    </tr>
-  </tbody>
-</table>
         
     </div>
 	  <div class="govuk-grid-column-one-third">
