--- a/app/views/9-3-5/return-period.html
+++ b/app/views/9-3-5/return-period.html
@@ -16,7 +16,7 @@
          <p><a href="#">Download error reports</a> (Zip, 1.3MB) </p> 
         <p>If you need to correct the data you've submitted, <a href="choose_file_to_upload.html">submit another ILR file</a>.</p>
         
-        <p><a href="./choose_file_to_upload.html">View reports for other periods</a></p>
+        <p><a href="https://hub.fasst.org.uk">View reports for other periods</a></p>
 
      
 				<!--<details class="govuk-details">
