--- a/app/views/9-3-5/ilr-email-for-provider-reports.html
+++ b/app/views/9-3-5/ilr-email-for-provider-reports.html
@@ -55,7 +55,7 @@
 
                                         <p>We&rsquo;ve processed your ILR file and your reports are now ready to view.</p>
 
-                                        <p>To view your reports you will need to <a href="./return-period.html">sign in</a>.</p>
+                                        <p><a href="./return-period.html">View your reports</a>.</p>
 
                                         <p>Kind regards,</p>
 
