reports static pages

--- a/app/views/KitKat-9-4-2/contents.html
+++ b/app/views/KitKat-9-4-2/contents.html
@@ -17,6 +17,14 @@
       	<p>
         	Please do not enter any personal information. This prototype is not secure.
       	</p>
+        
+        <h2 class="govuk-heading-l">Pages for research</h2>
+        
+        <ul class="govuk-list govuk-list--number">
+			<li><a href="reports_inperiod.html">Reports in-period activity</a></li>
+		  	<li><a href="reports_closed.html">Reports closed period</a></li>
+            <li><a href="previous-reports.html">Previous reports</a></li>
+        </ul>
 
 		<h2 class="govuk-heading-l">ILR User Journey (Happy path)</h2>
 		
