--- a/app/views/KitKat-9-4-2/previous-reports.html
+++ b/app/views/KitKat-9-4-2/previous-reports.html
@@ -11,7 +11,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">		
 		<h1 class="govuk-heading-xl">Reports history</h1>
-        <p>View your final reports from each period at the time of close.</p>
+        <p>View your final reports from each period at the time of close.</p>       
         <h2 class="govuk-heading-m">Academic year 2018 to 2019</h2>
        
         <table class="govuk-table">
@@ -59,6 +59,42 @@
       <th class="govuk-table__header" scope="row">R11</th>
       <td class="govuk-table__cell"><a href="#">ILR-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.1MB)</td>        
     </tr>
+    <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">R10</th>
+      <td class="govuk-table__cell"><a href="#">ILR-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.2MB)</td>        
+    </tr>
+      <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">R09</th>
+      <td class="govuk-table__cell"><a href="#">ILR-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.9MB)</td>        
+    </tr>
+       <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">R08</th>
+      <td class="govuk-table__cell"><a href="#">ILR-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.7MB)</td>        
+    </tr>
+    <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">R07</th>
+      <td class="govuk-table__cell"><a href="#">ILR-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.7MB)</td>        
+    </tr>
+    <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">R06</th>
+      <td class="govuk-table__cell"><a href="#">ILR-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.3MB)</td>        
+    </tr>
+    <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">R05</th>
+      <td class="govuk-table__cell"><a href="#">ILR-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.3MB)</td>        
+    </tr>
+    <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">R04</th>
+      <td class="govuk-table__cell"><a href="#">ILR-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.3MB)</td>        
+    </tr>
+    <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">R03</th>
+      <td class="govuk-table__cell"><a href="#">ILR-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.5MB)</td>        
+    </tr>
+    <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">R02</th>
+      <td class="govuk-table__cell"><a href="#">ILR-12345678-1819-20180806-151209-02.ZIP</a> (Zip, 1.7MB)</td>        
+    </tr>     
   </tbody>
 </table>
     </div>
