--- a/app/views/KitKat-9-4-2/reports_closed.html
+++ b/app/views/KitKat-9-4-2/reports_closed.html
@@ -8,32 +8,19 @@
 
 {% block content %}
 
-  <div class="govuk-grid-row">
+    <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">		
-		<h1 class="govuk-heading-xl">Reports</h1>
+		<h1 class="govuk-heading-xl">Reports <span class="govuk-caption-xl">Return Period 2 (R02)</span></h1>
         
+        <p>This period is closed.</p>      
         
-        <h2 class="govuk-heading-l">Return Period 2 (R02)</h2>
-        
-       
         <p><a href="#">Download business reports</a> (Zip, 1.3MB)</p> 
          <p><a href="#">Download error reports</a> (Zip, 1.3MB) </p>
         
-         <h2 class="govuk-heading-l">Return Period 13 (R13)</h2>
-      
-        <p><a href="#">Download business reports</a> (Zip, 1.3MB)</p> 
-         <p><a href="#">Download error reports</a> (Zip, 1.3MB) </p>        
-        
+        		        
         <p>If you need to correct the data you've submitted, <a href="choose_file_to_upload.html">submit another ILR file</a>.</p>
         <p>You can also <a href="./previous-reports.html">view your reports history</a>.
 </p>
-
-    
-
-
- 
-        
-     
         
     </div>
 	  <div class="govuk-grid-column-one-third">
