--- a/app/views/index.html
+++ b/app/views/index.html
@@ -76,6 +76,17 @@
         <td class="govuk-table__cell "><a href="KitKat-9-4-0/contents.html">Contents</a></td>
         <td class="govuk-table__cell "><a href="KitKat-9-4-0/start.html">Start now</a></td>
     </tr>
+           <tr class="govuk-table__row">
+      <th class="govuk-table__header" scope="row">9.3.6</th>
+        <td class="govuk-table__cell ">
+            <p>Stopped version for MVS</p>
+            <ul class="govuk-list govuk-list--bullet">
+                <li>added submission history to reports page</li>               
+            </ul>
+        </td>
+        <td class="govuk-table__cell "><a href="9-3-6/contents.html">Contents</a></td>
+        <td class="govuk-table__cell "><a href="./9-3-6/start.html">Start now</a></td>
+    </tr>
       <tr class="govuk-table__row">
       <th class="govuk-table__header" scope="row">9.3.5</th>
         <td class="govuk-table__cell ">
